--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "6.4.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -28,9 +29,9 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start:backend": "nodemon index.js",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.24",
+    "craco-alias": "^3.0.1",
     "gh-pages": "^3.2.3"
   }
 }
